# fastapi-mvp-template

./: .env.example  .gitignore  .gunicorn.conf.py  Docker-compose.yaml  Dockerfile  Makefile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
src/: main.py
src/ai/: __init__.py  agents.py
src/api/http/: exceptions.py  middlewares.py  setup.py
src/api/http/routes/: ai.py  health.py  users.py
src/connectors/: genderize.py
src/core/: config.py  di.py  logging.py  setup.py
src/dao/: db.py  users.py
src/dao/alembic/: env.py
src/dao/alembic/versions/: 2026_01_16_2220-3fa7451682f8_.py  2026_03_02_1924-34896bb52eb1_gender_type_for_user.py
src/exceptions/: base.py  users.py
src/infrastructure/: http_client.py
src/models/: __init__.py  base.py  types.py  users.py
src/schemas/: base.py  genderize.py  users.py
src/services/: gender_receiver.py  users.py
tests/http/: test_health.py  test_users.py
tests/services/: users.py
